--- a/sass-encodeuricomponent.scss
+++ b/sass-encodeuricomponent.scss
@@ -1,16 +1,18 @@
 @charset "utf-8"; 
 
 $asciiHexMap: (
-	"	": "%09",
 	" ": "%20",
 	"\"": "%22",
+	"#": "%23",
+	"$": "%24",
 	"%": "%25",
-	"/": "%2f",
+	"&": "%26",
+	"@": "%40",
+	"`": "%60",
 	"<": "%3c",
 	">": "%3e",
 	"\\": "%5c",
 	"^": "%5e",
-	"`": "%60",
 	"{": "%7b",
 	"|": "%7c",
 	"}": "%7d"
@@ -24,8 +26,8 @@ $asciiHexMap: (
 	@return $hex;
 }
 
-
-@function encodeURIComponent ($str: '') {
+@function encodeURIComponent ($raw: '') {
+  $str: $raw + ' ';
 	$str_len: str_length($str);
 	$result: '';
 	@for $i from 1 through $str_len {
